updated teachme ... fixed menu page layout issue

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -238,14 +238,14 @@ a.navbar-brand img {
 
 // ------ Languages cards styling below -----
 
-.languages-container {
+.menu-container {
   display: grid;
   grid-template-columns: auto 200px 200px 200px auto;
   grid-template-rows: 80px 200px 300px auto;
   grid-column-gap: 100px;
   grid-row-gap: 25px;}
 
-.languages-page-title {
+.menu-page-title {
   text-align: center;
   grid-column-start: 2;
   grid-column-end: 5;
